# Heuristic_Benchmarking_Framework

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  LOG.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  lint.yml  nightly.yml  solvers-nightly.yml  tests.yml
configs/: instances_to_generate.yaml  placeholder_exp.yaml  plan_phase_1.yaml
data/instances/: instances_index.txt
docs/: 00_architectural_overview.md  01_project_plan_and_workflow.md  index.md
docs/api/: generator_cli.md  heuristics_greedy.md  hpc_framework_cli.md  orchestrator_ssh_executor.md
docs/decisions/: 001_choice_heuristic_language.md  003_metodologia_gerador_e_analise.md  004_testing_and_ci.md
docs/protocol/: proto_v3.1.1.md
docs/reports/: 01_instance_generator.md  02_experimental_campaign.md
docs/testing/: CI.md  TESTING.md  TRACEABILITY.md
docs/testing/testcases/: TC_001_modularity_gate.md  TC_002_cv_ceiling.md  TC_003_schema_freeze.md  TC_004_cli_examples.md  TC_005_perf_smoke.md
env/: Dockerfile
scripts/: 03_run_pilot_calibration.py  master_pipeline.py  pack_manifest_v1.py  pipeline.py  smoke_kahip.py  smoke_metis.py  stats_compare.py  validate_manifest_v1.py
specs/: bounds.json  budgets.yml  schema_input.json  schema_output.json
specs/jsonschema/: solver_run.schema.v1.json
src/generator/: __init__.py  cli.py
src/heuristics/: __init__.py  greedy.py
src/hpc_framework/: __init__.py  cli.py  runner.py
src/hpc_framework/solvers/: __init__.py  common.py  kahip.py  metis.py
src/orchestrator/: __init__.py  ssh_executor.py
tests/: conftest.py  test_cov_helpers.py  test_entrypoints.py  test_generator.py  test_results_schema.py  test_runner_smoke.py  test_sanity.py  test_solvers_external.py  test_solvers_smoke.py
tools/: diagnostics.sh
