[project]
name = "hpc-framework"
version = "0.1.0"
description = "Framework for Heuristic Performance Characterization"
authors = [
    {name = "Brunno Sink",email = "brunnosink2@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
