[project]
name = "hpc-framework"
version = "6.1.0"
description = "Framework for Heuristic Performance Characterization"
authors = [
    {name = "Brunno Sink",email = "brunnosink2@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fabric (>=3.2.2,<4.0.0)",
    "jsonschema (>=4.25.0,<5.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "networkx (>=2.6)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
